manifests/applications/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seerr
  name: seerr-prod-media-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  strategy: {}
  template:
    metadata:
      labels:
        app: seerr
    spec:  
      securityContext:
        fsGroup: 1000
      containers:
      - image: ghcr.io/seerr-team/seerr
        name: seerr
        ports:
          - containerPort: 5055
            name: http
            protocol: TCP
        resources: {}
        volumeMounts:
        - name: data
          mountPath: /app/config
          readOnly: false
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: seerr-prod-media-pvc
