manifests/applications/media/seerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seerr-prod-media-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: "seerr.cbxon.local"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: seerr-prod-media-svc
            port:
              number: 5055
